# quantum_logical

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  git-conventional-commits.yaml  pyproject.toml  setup.cfg
.github/workflows/: format-check.yml  rename_project.yml  tests.yml
docs/: notes.md
rustlib/: Cargo.toml
rustlib/src/: lib.rs
src/fault_encoding/: 04_encoded_ops.ipynb  composite.py  qudit_op.py
src/fault_encoding/syndrome_gates/: 02_cz_gf.ipynb
src/notebooks/: 00_optimized_allocation.ipynb  01_main.ipynb  01_qutrit_gad.ipynb  01_snail_qubit.ipynb  02_brute_search.ipynb  02_trying_to_correct.ipynb  03_propagator.ipynb  04_comparing_solvers.ipynb  04_sge.ipynb  05_array.ipynb  06_new_try.ipynb  06_new_try_.ipynb  allocation.ipynb  basis_snail.ipynb  crowding_contours.ipynb  decomp_optimizer.ipynb  destab.ipynb  dev_colors.ipynb  error_channels.ipynb  flow.ipynb  hamiltonian_analysis.ipynb  justify_approximations.ipynb  logical_basis.ipynb  main.ipynb  markov.ipynb  multi_weyl.ipynb  new_snail_basis.ipynb  notes.md  rail_cnot.ipynb  repetition.ipynb  step_down.ipynb  test.ipynb
src/notebooks/EC/: 00_qubit_bit_flip.ipynb  00_qubit_bit_flip_redone.ipynb  01_qubit_phase_flip_code_redone.ipynb  01_qutrit_phase_flip.ipynb  01_qutrit_phaseflip.ipynb
src/notebooks/deprecated/: 01_snail_qubit.ipynb  02_qubit_cavity.ipynb  02_snail_full_H.ipynb  04_crowding.ipynb  basis_snail.ipynb  destab.ipynb  dev_propagator.ipynb  error_channels.ipynb  expensive_parity.ipynb  lab4_solution.ipynb  multi_weyl.ipynb  peep.ipynb
src/notebooks/error_correction/: 00_simulating_3_wave_mixing.ipynb  01_simulating_5_wave_mixing.ipynb  03_building_the_initial_state_with_3_wave_gate.ipynb  04_trial_multiprocessing.ipynb  05_trial_with_qutrit.ipynb  06_building_propagator_cnot.ipynb  07_CNOT_3_Wave.ipynb  08_run_the_f_e_cnot_f.ipynb  09_how_long_does_cnot_3_wave_take.ipynb  10_experiment_hamiltonian.ipynb  11_trotterization.ipynb  12_t1_gain.ipynb  experimental_info.  notes_error_correction_procedure.md  recyclingham.ipynb
src/notebooks/noisy_simulation/: 00_basic_fidelity.ipynb  01_basic_fidelity.ipynb  01_multi_qubit_channel.ipynb  01_qutrit_gad.ipynb  02_qutrit_gad.ipynb  03_noisy_erasure_detect.ipynb  04_iswap_crosskerr.ipynb  06_finding_delta_constraints.ipynb  dev_effectiveT1.ipynb  profile_output.prof
src/notebooks/pulse_sim/: 01_snail_qubit.ipynb  02_qubit_cavity.ipynb  03_cavity_biased_qubits.ipynb  04_crowding.ipynb  4_qubit_test_for_lambda_to_n.ipynb  Work_flow_experimentalist.ipynb  crowing_experiment.ipynb  crowing_experiment1.ipynb  dev_bare_crowding.ipynb  dev_optimized_allocation.ipynb  (+13 more)
src/quantum_logical/: Work_flow_general.py  __init__.py  basis.py  channel.py  composite.py  conversiongain.py  creating_operators.py  crowding_experiment.py  encoded_layout.py  error_channel.py  hamiltonian.py  interaction.py  mode.py  module_build.py  module_build_.py  operators.py  pulse.py  qubitoperator.py  qudit_op.py  spectator_testing.py  system.py  test_freq.py  trotter.py  trotter_sim.py  unitary_util.py  work_flow.py
src/scripts/: main.ipynb
src/tests/: electron_test.py  operator_test.py
(+49 files in other folders)
